name: conkin
version: 0.1.0.0
synopsis: 
homepage: http://github.com/rampion/continuation-kind
license: PublicDomain
author: Noah Luck Easterly
maintainer: noah.easterly@gmail.com
build-type: Simple
extra-source-files: ChangeLog.md, README.md
cabal-version: >=1.10

library
  exposed-modules: Conkin
  -- use 4.9 so hdevtools continues to work
  build-depends: base >=4.9 && <4.11
  default-language: Haskell2010
  ghc-options: -Wall -Wextra -Werror

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends: base
               , doctest >=0.11.2 && <0.12
  ghc-options: -Wall -Wextra -Werror
  default-language: Haskell2010

test-suite readme
  type: exitcode-stdio-1.0
  main-is: README.lhs
  build-depends: base
               , markdown-unlit >=0.4.0 && <0.5
               , vector >= 0.12 && <0.13
               , doctest >=0.11.2 && <0.12
               , pretty-show >= 1.6.13 && <2.0.0
               -- , happy >= 1.19.8
               , data-default >= 0.7.0 && <0.8
               , conkin
  ghc-options: -pgmL markdown-unlit -Wall -Wextra -Werror
  default-language: Haskell2010
