name: conkin
version: 1.0.2
synopsis: Tools for functors from Hask^k to Hask
description: Tools for functors from Hask^k to Hask
homepage: http://github.com/rampion/conkin
category: Control
license: PublicDomain
author: Noah Luck Easterly
maintainer: noah.easterly@gmail.com
build-type: Simple
extra-source-files: ChangeLog.md, README.md
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/rampion/conkin.git

source-repository this
  type: git
  location: git://github.com/rampion/conkin.git
  tag: v1.0.2

flag Development
  description: Enable all warnings and upgrade warnings to errors
  default: False
  manual: True

library
  exposed-modules: Conkin
  build-depends: base >=4.9 && <4.11
  default-language: Haskell2010
  if flag(development)
    ghc-options: -Wall -Wextra -Werror

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends: base
               , doctest >=0.11.2 && <0.12
               , pretty-show >= 1.6.13 && <2.0.0
  default-language: Haskell2010
  if flag(development)
    ghc-options: -Wall -Wextra -Werror


test-suite readme
  type: exitcode-stdio-1.0
  main-is: README.lhs
  build-depends: base
               , markdown-unlit >=0.4.0 && <0.5
               , doctest >=0.11.2 && <0.12
               , pretty-show >= 1.6.13 && <2.0.0
               , data-default >= 0.7.0 && <0.8
               , conkin
  default-language: Haskell2010
  if flag(development)
    ghc-options: -pgmL markdown-unlit -Wall -Wextra -Werror
  else
    ghc-options: -pgmL markdown-unlit
