name: continuation-kind
version: 0.1.0.0
synopsis: 
homepage: http://github.com/rampion/continuation-kind
license: PublicDomain
author: Noah Luck Easterly
maintainer: noah.easterly@gmail.com
build-type: Simple
extra-source-files: ChangeLog.md, README.md, Continuation/Kind.lhs
cabal-version: >=1.10

library
  exposed-modules: Continuation.Kind
  build-depends: base >=4.10 && <4.11
               , markdown-unlit >=0.4.0 && <0.5
  default-language: Haskell2010
  ghc-options: -pgmL markdown-unlit -Wall -Wextra -Werror

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends: base
               , markdown-unlit >=0.4.0 && <0.5
               , doctest >=0.11.2 && <0.12
  ghc-options: -Wall -Wextra -Werror
  default-language: Haskell2010
